--- a/app/src/main/res/layout-land/fragment_crime.xml
+++ b/app/src/main/res/layout-land/fragment_crime.xml
@@ -4,6 +4,9 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
+    <!-- 水平布局-->
+    <!-- 定义在水平或者垂直布局文件里的同一组件必须具有同样的ID属性，这样才能引用到它-->
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,14 +37,14 @@
         <Button
             android:id="@+id/crima_date"
             android:layout_weight="1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"/>
 
         <CheckBox
             android:id="@+id/crime_solved"
             android:layout_weight="1"
             android:text="@string/crime_solved_lable"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
