新增相机视图布局和标题视图布局&在fragment_crime中引入公共布局。

--- a/app/src/main/res/layout-land/fragment_crime.xml
+++ b/app/src/main/res/layout-land/fragment_crime.xml
@@ -7,6 +7,9 @@
     <!-- 水平布局-->
     <!-- 定义在水平或者垂直布局文件里的同一组件必须具有同样的ID属性，这样才能引用到它-->
 
+
+    <include layout="@layout/view_camera_and_title" />
+
     <TextView
         style="?android:listSeparatorTextViewStyle"
         android:layout_width="match_parent"
