--- a/app/src/main/res/layout-land/fragment_crime.xml
+++ b/app/src/main/res/layout-land/fragment_crime.xml
@@ -16,20 +16,20 @@
         android:layout_height="wrap_content"
         android:text="@string/crime_title_lable"/>
 
-    <EditText
-        android:id="@+id/crime_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:hint="@string/crime_title_hint"/>
+    <!--<EditText-->
+        <!--android:id="@+id/crime_title"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginLeft="16dp"-->
+        <!--android:layout_marginRight="16dp"-->
+        <!--android:hint="@string/crime_title_hint"/>-->
 
-    <TextView
-        style="?android:listSeparatorTextViewStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/crime_deatils_lable"
-        />
+    <!--<TextView-->
+        <!--style="?android:listSeparatorTextViewStyle"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/crime_deatils_lable"-->
+        <!--/>-->
 
     <LinearLayout
         android:layout_width="match_parent"
